styles.css
:root {
    font-family: "Montserrat Alternates", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 22px;
    --text: #0b0b0c;
    --background: #f9fffe;
    --primary: #ffeed6;
    --secondary: #790c30;
    --accent: #00ff8c;
}

body {
    color: black;
    background-color: #ffeed6;
    margin: 0;
    padding: 0;
}

body::-webkit-scrollbar {
    width: 0.70rem;
    background: #ffeed6;
}

body::-webkit-scrollbar-track {

    background: #181202;
}

body::-webkit-scrollbar-thumb {
    border-radius: 100vh;
    background: #790c30;
}

body::-webkit-scrollbar-thumb:hover {
    border-radius: 100vh;
    background: #ffeed6;
    border: .2ch solid #790c30;
}

main {

    margin-left: 5rem;
    padding: 1rem;
}

.navbar {
    position: fixed;
    transition: 400ms ease;
    background-color: var(--secondary);
}

.nav-item {
    width: 100%;
}

.nav-item:last-child {
    margin-top: auto;
}

.navbar-nav {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
}

.nav-link {
    filter: hue-rotate(55deg) saturate(.25) brightness(6.5) opacity(.95);
    display: flex;
    align-items: center;
    height: 5rem;
    text-decoration: none;
    transition: 500ms;
}

.nav-link:hover {
    filter: hue-rotate(30deg) saturate(.75) brightness(8) opacity(1);
}

.link-text {
    pointer-events: none;
    display: block;
    color: #790c30;
    filter: opacity(0) blur(30px);
    margin-left: 1rem;
    transition: .5s;
}

/*.link-text:hover.dropdown-content{*/
/*    display:block;*/
/*}*/
.nav-link svg {
    /*filter: brightness(800%);*/
    fill: #790c30;
    min-width: 2rem;
    margin: 0 1.5rem;
    width: 2rem;
}

.page {
    margin: 0;
    display: none;
    transition: .5s;
}

.active {
    margin: 0;
    display: block;
    background-color: #181202;
    color: white;
    opacity: 1;
    transition: .5s;
}
.cockWrapper{

}
.cocktails {
    pointer-events: none;
    border: 5px solid black;
}

@media only screen and (min-width: 600px) {
    .navbar {
        padding-right: .5rem;
        top: 0;
        width: 5rem;
        height: 100vh;

    }

    /*.navbar:hover {*/
    /*    width: 15rem;*/
    /*}*/
    .cocktails{
        display: inline-grid;
    }
    .navbar:hover .link-text {
        filter: opacity(1);
        display: block;
    }

    .cocktails:hover .dropdown-content {
        pointer-events: auto;
        filter: opacity(1) blur(0px);
        display: block;
    }

    .navbar:hover .cocktails {
        pointer-events: revert;
    }
}

@media only screen and (max-width: 600px) {
    .navbar .link-text {
        filter: opacity(1);
        display: none;
    }

    .navbar {
        bottom: 0;
        width: 100vh;
        height: 5rem;
    }

    .navbar-nav {
        flex-direction: row;
    }

    .nav-link {
        justify-content: center;
    }
    .cocktails {
        pointer-events: revert;
    }
    main {
        margin: 0;
    }
}

.dropdown-content {
    filter: opacity(0) blur(30px);
    position: absolute;
    background-color: #790c30;
    width: 9.5rem; /*Keep this synced too.*/
    transition: 600ms;
    z-index: 1;
    pointer-events: none;

    left: 11rem; /*Keep this synced with values in main.js file for the hovering effect to avoid clipping*/
}

.dropdown-content a {

    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {
    background-color: #ddd;
}
  

